--- a/src/views/bookView.ejs
+++ b/src/views/bookView.ejs
@@ -102,7 +102,7 @@
                     <div class="row">
                         <br>
                         <div class="col-md-2 col-sm-3 text-center">
-                            <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/58.jpg" style="width:100px;height:100px" class="img-circle"></a>
+                            <a class="story-title" href="#"><img alt="" src="<%=book.book.image_url%>" style="width:100px;height:100px" class="img-circle"></a>
                         </div>
                         <div class="col-md-10 col-sm-9">
                             <h3><%=book.title%></h3>
@@ -112,7 +112,7 @@
                                     </h4></div>
                                 <div class="col-xs-3"></div>
                             </div>
-                            <br><br>
+                            <br><%-book.book.description%><br>
                         </div>
                     </div>
                     <hr>
@@ -138,13 +138,6 @@
     <div class="row">
         <div class="col col-sm-12">
 
-            <h1>Follow Us</h1>
-            <div class="btn-group">
-                <a class="btn btn-twitter btn-lg" href="#"><i class="icon-twitter icon-large"></i> Twitter</a>
-                <a class="btn btn-facebook btn-lg" href="#"><i class="icon-facebook icon-large"></i> Facebook</a>
-                <a class="btn btn-google-plus btn-lg" href="#"><i class="icon-google-plus icon-large"></i> Google+</a>
-            </div>
-
         </div>
     </div>
 </div>
@@ -155,20 +148,7 @@
 
 <footer>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <ul class="list-inline">
-                    <li><i class="icon-facebook icon-2x"></i></li>
-                    <li><i class="icon-twitter icon-2x"></i></li>
-                    <li><i class="icon-google-plus icon-2x"></i></li>
-                    <li><i class="icon-pinterest icon-2x"></i></li>
-                </ul>
 
-            </div>
-            <div class="col-sm-6">
-                <p class="pull-right">Built with <i class="icon-heart-empty"></i> at <a href="http://www.bootply.com">Bootply</a></p>
-            </div>
-        </div>
     </div>
 </footer>
 <!-- script references -->
