--- a/src/views/bookView.ejs
+++ b/src/views/bookView.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Storystrap Template</title>
+    <title>LibraryApp</title>
     <meta name="generator" content="Bootply" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- bower:css -->
@@ -20,7 +20,7 @@
     <!-- inject:js -->
     <!-- endinject -->
     <!--[if lt IE 9]>
-    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <!--<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>-->
     <![endif]-->
 
 </head>
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-7">
-                <h1>Storystrap
+                <h1>What I read
                     <p class="lead"></p>
                 </h1>
             </div>
@@ -108,7 +108,7 @@
                             <h3><%=book.title%></h3>
                             <div class="row">
                                 <div class="col-xs-9">
-                                    <h4><span class="label label-default"></span><%=book.author.name%></h4><h4>
+                                    <h4><span class="label label-default"></span>Placeholder for author name</h4><h4>
                                     </h4></div>
                                 <div class="col-xs-3"></div>
                             </div>
