--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,7 +20,7 @@
         <!-- inject:js -->
         <!-- endinject -->
       <!--[if lt IE 9]>
-			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<!--	<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script> -->
 		<![endif]-->
 
 	</head>
