--- a/src/views/authorListView.ejs
+++ b/src/views/authorListView.ejs
@@ -99,23 +99,23 @@
 
 
                     <!--/stories-->
+                    <% for(var i=0; i<authors.length; i++) {%>
                     <div class="row">
                         <br>
-                        <div class="col-md-2 col-sm-3 text-center">
-                            <a class="story-title" href="#"><img alt="" src="<%=book.book.image_url%>" style="width:100px;height:100px" class="img-circle"></a>
-                        </div>
                         <div class="col-md-10 col-sm-9">
-                            <h3><%=book.book.title%></h3>
+                            <h3><%=authors[i].firstname%> <%=authors[i].lastname%></h3>
                             <div class="row">
                                 <div class="col-xs-9">
-                                    <h4><span class="label label-default"></span><%=book.book.authors.author.name%></h4><h4>
+                                    <h4><span class="label label-default"></span></h4><h4>
+                                        <small style="font-family:courier,'new courier';" class="text-muted"><a href="/authors/<%=authors[i].goodreadsauthorid%>" class="text-muted">Read More</a></small>
                                     </h4></div>
                                 <div class="col-xs-3"></div>
                             </div>
-                            <br><%-book.book.description%><br>
+                            <br><br>
                         </div>
                     </div>
                     <hr>
+                    <%}%>
                     <!--/stories-->
 
 
@@ -138,6 +138,13 @@
     <div class="row">
         <div class="col col-sm-12">
 
+            <h1>Follow Us</h1>
+            <div class="btn-group">
+                <a class="btn btn-twitter btn-lg" href="#"><i class="icon-twitter icon-large"></i> Twitter</a>
+                <a class="btn btn-facebook btn-lg" href="#"><i class="icon-facebook icon-large"></i> Facebook</a>
+                <a class="btn btn-google-plus btn-lg" href="#"><i class="icon-google-plus icon-large"></i> Google+</a>
+            </div>
+
         </div>
     </div>
 </div>
@@ -148,7 +155,9 @@
 
 <footer>
     <div class="container">
+        <div class="row">
 
+        </div>
     </div>
 </footer>
 <!-- script references -->
