Added Author name to bookListView.

--- a/src/views/bookListView.ejs
+++ b/src/views/bookListView.ejs
@@ -106,7 +106,7 @@
                             <h3><%=books[i].booktitle%></h3>
                             <div class="row">
                                 <div class="col-xs-9">
-                                    <h4><span class="label label-default"></span></h4><h4>
+                                    <h4><span class="label label-default"></span><%=books[i].firstname%> <%=books[i].lastname%></h4><h4>
                                         <small style="font-family:courier,'new courier';" class="text-muted"><a href="/books/<%=books[i].goodreadsid%>" class="text-muted">Read More</a></small>
                                     </h4></div>
                                 <div class="col-xs-3"></div>
